# flowforge-plugins

./: CMakeLists.txt  build.sh
PlugSRT/: CMakeLists.txt
Plugins/: CMakeLists.txt  Plugin.hpp
Plugins/PlugSRT/: CMakeLists.txt  PlugSRT.cpp
